--- a/sph_style/templates/sph_style/base.html
+++ b/sph_style/templates/sph_style/base.html
@@ -87,10 +87,12 @@
 {% endblock %}   
 </footer>
 
+{% block custom_js_includes %}
+
+{% endblock %}
 <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
 <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
 
 <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.1.0/email.min.js"></script>
-<script src="{% static 'blog/js/blogentry_form.js' %}"></script>
 </body>
 </html>
