--- a/blog_admin/templates/blog_admin/index.html
+++ b/blog_admin/templates/blog_admin/index.html
@@ -10,16 +10,54 @@
 
 {% block blog_heading %}
 <p class="heading-text padding-top padding-bottom text-center">
-    Administration -- =)
+    Administration =)
 </p>
 {% endblock %}
 
 {% block blog_body %}
-<div id='blog-admin'>
-	[[ testInfo ]] 
+<div id='blog-admin' class="container sapphire-form-wrapper">
+    <div class="row">
+        <div class="col-lg-4">
+            <p class="subheading-text">Category Management</p>
+        </div>
+    </div>
+    <div class="form-columned">
+        {% csrf_token %}
+        <div class="form-left">
+            <div class="row padding-top">
+                    <label for="category_title">Title</label>
+                    <input type="text" id="category_title" v-model="categoryForm.title" class="form-control">
+      
+            </div>
+            <div class="row padding-top">
+     
+                    <label for="category_parent">Parent</label>
+                    <select class="custom-select" id="category_parent" v-model="categoryForm.parent">
+                        <option v-for="category in categories" value="category">[[category.title]]</option>
+                    </select>
+        
+            </div>
+            <div class="row padding-top">
+       
+                    <button type="button" class="btn-outline-blue--dark btn-sm" @click="submitCategoryForm()">
+                        Create
+                    </button>
+        
+            </div>
+        </div>
+        <div class="form-right">
+            <div class="row padding-top">
+                <label for="category_search">Select a Category</label>
+                <input type="text" class="form-control" v-model="categoryCriteria.title" @keyup="getCategoriesByTitle()">
+            </div>
+            <div class="row padding-top">
+                <a v-for="category in categoryCriteria.results" @click="getCategoryToEdit(category)">[[category.title]]</a>
+            </div>
+        </div>    
+    </div>
 </div>
 {% endblock %}
 
 {% block blog_custom_js_includes %}
-<script type="module" src="{% static 'blog_admin/js/blog_admin.js' %}"></script>
+<script src="{% static 'blog_admin/js/blog_admin.js' %}"></script>
 {% endblock %}
