Correcting a bug where a user could view private posts (authored by other users) via the category view

--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -80,3 +80,7 @@
     </div>
 </div>
 {% endblock %}
+
+{% block blog_custom_js_includes %}
+  <script src="{% static 'blog/js/blogentry_form.js' %}"></script>
+{% endblock %}
