--- a/blog/templates/blog/blogentry_confirm_delete.html
+++ b/blog/templates/blog/blogentry_confirm_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block hero-image-type %}
-<div class="hero-sub-image hero-sm morning-red">
+<div class="hero-sub-image hero-sm deep-red">
 {% endblock %} 
 
 {% block hero-image-text %}
