--- a/blog/templates/blog/blogentry_list_category.html
+++ b/blog/templates/blog/blogentry_list_category.html
@@ -1,7 +1,7 @@
 {% extends 'blog/blog_base.html' %} 
 
 {% block hero-image-type %}
-<div class="hero-sub-image hero-sm">
+<div class="hero-sub-image hero-sm dusk-blue">
 {% endblock %} 
 
 {% block hero-image-text %}
