--- a/blog_admin/templates/blog_admin/index.html
+++ b/blog_admin/templates/blog_admin/index.html
@@ -27,12 +27,10 @@
                         <input type="text" id="category_title" v-model="categoryForm.title" class="form-control">
                 </div>
                 <div class="row padding-top">
-         
-                        <label for="category_parent">Parent</label>
-                        <select class="custom-select" id="category_parent" v-model="categoryForm.parent">
-                            <option v-for="category in categories" :value="category">[[category.title]]</option>
-                        </select>
-            
+                    <label for="category_parent">Parent</label>
+                    <select class="custom-select" id="category_parent" v-model="categoryForm.parentModel">
+                        <option v-for="category in categories" :value="category">[[category.title]]</option>
+                    </select>
                 </div>
                 <div class="row padding-top">
                         <button type="button" class="btn-outline-blue--dark btn-sm" @click="submitCategoryForm()">
