--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -39,7 +39,7 @@
                     {% block navbar_item_2 %}
                         <div class="blog-nav-item">
                             <i class="fas fa-edit"></i>
-                            <a class="gray-link" href="{% url 'blog:new-entry' 'none' %}">
+                            <a class="gray-link" href="{% url 'blog:new-entry' %}">
                                 Write
                             </a>
                         </div>
