--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -19,24 +19,26 @@
 {% endblock %}
 
 {% block blog_body %}
-<div class="container">
+<div class="container" id="blog-entry-form">
     <form id='blog-form' method='POST' class='text-lg-form-wrapper'>
       {% csrf_token %}
       <div class="form-group padding-top">
         <div class="col-lg-7 form-center">
-          {{ form.category.label_tag }}
-          {{ form.category }}  
+          <label for="category">Category</label> 
+          <select id="category" class="form-control" v-model="blogEntry.category">
+            <option v-for="category in categories" :value="category">[[category.title]]</option>
+          </select>
         </div>
       </div>
       <div class="form-group">
         <div class="col-lg-7 form-center">
-          {{ form.title.label_tag }}
-          {{ form.title }}
+          <label for="title">Title</label>
+          <input type="text" id="title" class="form-control" v-model="blogEntry.title">
         </div>
       </div>
       <div class="form-group pt-2">
         <div class="col-lg-7 form-center">
-          {{ form.text_entry }}
+          <textarea class="form-control" v-model="blogEntry.text_entry"></textarea>
         </div>
       </div>
       <div class="form-group pt-2">
@@ -58,7 +60,7 @@
               </button>
   
               <div class="dropdown-menu">
-                <a type="button" class="btn btn-outline-primary dropdown-item" onClick='submitPrivatePost()'>Post Privately</a>
+                <a type="button" class="btn btn-outline-primary dropdown-item" @click='submitPrivatePost()'>Post Privately</a>
               </div>
             </div>
           </div>
